@@ -1,3 +1,10 @@
+2012-01-27  Prem Sichanugrist <psichanugrist@thoughtbot.com>
+
+* Paperclip will now replace all the special characters in the filename to an
+  underscore. This is a more desired behavior against having to deal with URL
+  escaping and unescaping later. You can see the list of blacklist characters
+  in `lib/paperclip/attachment.rb`
+
 2012-01-20	Jon Yurek <jyurek@thoughtbot.com>
 
 	* lib/paperclip/railtie.rb (insert): Hide ActiveRecord-specific stuff in
